--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -16,22 +16,24 @@
 </div>
 
 <div region="west" split="true" style="width:220px" title="导航菜单">
-    <li>
-        <span>Folder</span>
-        <ul>
-            <li>
-                <span>Sub Folder 1</span>
-                <ul>
-                    <li><span><a href="#">File 11</a></span></li>
-                    <li><span>File 12</span></li>
-                    <li><span>File 13</span></li>
-                </ul>
-            </li>
-            <li><span>File 2</span></li>
-            <li><span>File 3</span></li>
-        </ul>
-    </li>
-    <li><span>File21</span></li>
+    <ul id="tt" class="easyui-tree">
+        <li>
+            <span>Folder</span>
+            <ul>
+                <li>
+                    <span>Sub Folder 1</span>
+                    <ul>
+                        <li><span><a href="#">File 11</a></span></li>
+                        <li><span>File 12</span></li>
+                        <li><span>File 13</span></li>
+                    </ul>
+                </li>
+                <li><span>File 2</span></li>
+                <li><span>File 3</span></li>
+            </ul>
+        </li>
+        <li><span>File21</span></li>
+    </ul>
 </div>
 
 <div region="center">
@@ -46,4 +48,11 @@
     页面底部
 </div>
 </body>
+<script type="text/javascript">
+    $('#tt').tree({
+        onClick: function(node){
+            alert(node.text);
+        }
+    });
+</script>
 </html>
