--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -8,6 +8,7 @@
     <script src="/static/jQuery/jquery.js"></script>
     <script src="/static/easyui/jquery.easyui.min.js"></script>
     <script src="/static/vue/vue.js"></script>
+    <script src="/static/share/Utils.js"></script>
 </head>
 <style type="text/css">
     [v-cloak] {
@@ -25,26 +26,10 @@
     <button onclick="addMenu()">添加菜单</button>
 
     <ul id="tt" class="easyui-tree" data-options="animate:true">
-        <!--<li>-->
-            <!--<span>Folder</span>-->
-            <!--<ul>-->
-                <!--<li>-->
-                    <!--<span>Sub Folder 1</span>-->
-                    <!--<ul>-->
-                        <!--<li><span><a href="#">File 11</a></span></li>-->
-                        <!--<li><span>File 12</span></li>-->
-                        <!--<li><span>File 13</span></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--<li><span>File 2</span></li>-->
-                <!--<li><span>File 3</span></li>-->
-            <!--</ul>-->
-        <!--</li>-->
-        <!--<li><span>File21</span></li>-->
     </ul>
 </div>
 
-<div region="center">
+<div region="center" id="center">
     页面主体内容区
 </div>
 
@@ -56,11 +41,17 @@
     页面底部
 </div>
 </body>
+
 <script type="text/javascript">
 
     $(function () {
         $('#tt').tree({
-            url:'loadMenu'
+            url:'loadMenu',
+            onClick: function(node){
+                if(node.flag!=""){
+                    introducePage("center",node.flag);
+                }
+            }
         });
     })
 
